minimum rush setup

--- a/packages/user-db/package.json
+++ b/packages/user-db/package.json
@@ -8,6 +8,9 @@
   "main": "dist/index.js",
   "module": "dist/index.module.js",
   "unpkg": "dist/index.umd.js",
+  "files": [
+    "dist"
+  ],
   "config": {
     "unsafe-perm": true
   },
