--- a/services/web/package.json
+++ b/services/web/package.json
@@ -1,6 +1,10 @@
 {
   "name": "web",
   "private": true,
+  "files": [
+    ".next",
+    "dist"
+  ],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
